# news_mcp

./: .dockerignore  .env.example  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  run.sh
src/news_mcp/: models.py  server.py
src/news_mcp/news_retriever/: __init__.py  business_times.py  cna.py  mothership.py  news_retriever.py  straits_times.py
